# cmake-template

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
.cache/clangd/index/: config.hpp.DCCD571356820E29.idx  core.cpp.E64D34548B88B267.idx  core.hpp.BE90AF3E0CDEE482.idx  main.cpp.08EF492E10109FDD.idx  tests.cpp.7DA4F9864C7DFA2F.idx  tests.cpp.E35B4BFDCA949AFA.idx
app/: CMakeLists.txt
app/src/: main.cpp
app/tests/: CMakeLists.txt  tests.cpp
cmake/: CPM.cmake  Cache.cmake  ClangFormat.cmake  CompilerWarnings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  Linker.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake  VCEnvironment.cmake
core/: CMakeLists.txt
core/configure_files/: config.hpp.in
core/include/core/: core.hpp
core/include/example_core/: core.hpp
core/include/myproject_core/: core.hpp
core/include/project_core/: core.hpp
core/src/: core.cpp
core/tests/: CMakeLists.txt  tests.cpp
docs/: building.md  dependencies.md  make_it_your_own.md
